--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,10 @@ jobs:
   # Post a message to the ITAS Discord channel with pipeline updates.
   discord-lint:
     runs-on: ubuntu-latest
+    needs: lint
+    # Make sure this runs after to document the jobs completion
+    if: always()
+
     steps:
     - name: Discord Notification start
       uses: tsickert/discord-webhook@v5.3.0
@@ -74,6 +78,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: semgrep scan
+        id: semgrep_scan
         run: |
           semgrep \
           --sarif --output semgrep-sast.sarif \
@@ -85,12 +90,14 @@ jobs:
           path: semgrep-sast.sarif
       
       - name: Save SARIF artifact ID
-        run: echo "::set-output name=sarif_id::${{ steps.upload_sarif.outputs.artifact_id }}"
+        run: echo "::set-output name=sarif_id::${{ steps.semgrep_scan.outputs.artifact_id }}"
 
   # Post a message to the ITAS Discord channel with pipeline updates.
   discord-semgrep:
     runs-on: ubuntu-latest
     needs: semgrep
+    # Make sure this runs after to document the jobs completion
+    if: always()
 
     steps:
     - name: Discord Notification start
@@ -101,7 +108,12 @@ jobs:
         avatar-url: https://static.wikia.nocookie.net/zimwiki/images/4/4f/Duty_duty_duty_duty_duuuu.png/
         embed-title: "Semgrep complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        embed-description: "[Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n[Download Sarif File](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ needs.semgrep.outputs.sarif_id }})"
+        embed-description: |
+          "Job was "
+          ${{ job.status == 'success' && '' || 'not' }}
+          " completed successfully.\n"
+          "[Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n"
+          "[Download Sarif File](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ needs.semgrep.outputs.sarif_id }})"
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
@@ -130,6 +142,8 @@ jobs:
   discord-snyk:
     runs-on: ubuntu-latest
     needs: snyk
+    # Make sure this runs after to document the jobs completion
+    if: always()
 
     steps:
     - name: Discord Notification start
@@ -238,6 +252,8 @@ jobs:
   discord-e2e:
     runs-on: ubuntu-latest
     needs: e2e-test
+    # Make sure this runs after to document the jobs completion
+    if: always()
 
     steps:
     - name: Discord Notification start
@@ -286,6 +302,8 @@ jobs:
   discord-build:
     runs-on: ubuntu-latest
     needs: build
+    # Make sure this runs after to document the jobs completion
+    if: always()
 
     steps:
     - name: Discord Notification start
