--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,9 @@ jobs:
         avatar-url: https://static.wikia.nocookie.net/zimwiki/images/4/4f/Duty_duty_duty_duty_duuuu.png/
         embed-title: "Linting complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        embed-description: "[Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n"
+        embed-description: |
+          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
@@ -109,11 +111,9 @@ jobs:
         embed-title: "Semgrep complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         embed-description: |
-          "Job was "
-          ${{ job.status == 'success' && '' || 'not' }}
-          " completed successfully.\n"
-          "[Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n"
-          "[Download Sarif File](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ needs.semgrep.outputs.sarif_id }})"
+          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
+          [Download Sarif File](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ needs.semgrep.outputs.sarif_id }})
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
@@ -154,7 +154,9 @@ jobs:
         avatar-url: https://static.wikia.nocookie.net/zimwiki/images/4/4f/Duty_duty_duty_duty_duuuu.png/
         embed-title: "Snyk complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        embed-description: "[Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n"
+        embed-description: |
+          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
@@ -264,7 +266,9 @@ jobs:
         avatar-url: https://static.wikia.nocookie.net/zimwiki/images/4/4f/Duty_duty_duty_duty_duuuu.png/
         embed-title: "End to end test complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        embed-description: "[Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n"
+        embed-description: |
+          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
@@ -314,7 +318,9 @@ jobs:
         avatar-url: https://static.wikia.nocookie.net/zimwiki/images/4/4f/Duty_duty_duty_duty_duuuu.png/
         embed-title: "Build complete for \"${{github.event.head_commit.message}}\"... Cleaning up"
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        embed-description: "[Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n"
+        embed-description: |
+          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
