--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,8 +62,8 @@ jobs:
         embed-title: "Linting complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         embed-description: |
-          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
-          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
+          Job was ${{ job.status == 'failed' && 'not' || '' }} completed successfully.
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
@@ -111,8 +111,8 @@ jobs:
         embed-title: "Semgrep complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         embed-description: |
-          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
-          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
+          Job was ${{ job.status == 'failed' && 'not' || '' }} completed successfully.
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           [Download Sarif File](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ needs.semgrep.outputs.sarif_id }})
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
@@ -155,8 +155,8 @@ jobs:
         embed-title: "Snyk complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         embed-description: |
-          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
-          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
+          Job was ${{ job.status == 'failed' && 'not' || '' }} completed successfully.
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
@@ -267,8 +267,8 @@ jobs:
         embed-title: "End to end test complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         embed-description: |
-          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
-          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
+          Job was ${{ job.status == 'failed' && 'not' || '' }} completed successfully.
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
@@ -319,8 +319,8 @@ jobs:
         embed-title: "Build complete for \"${{github.event.head_commit.message}}\"... Cleaning up"
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         embed-description: |
-          Job was ${{ job.status == 'success' && '' || 'not' }} completed successfully.\n
-          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\n
+          Job was ${{ job.status == 'failed' && 'not' || '' }} completed successfully.
+          [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
 
