--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -267,7 +267,7 @@ jobs:
         embed-title: "End to end test complete for \"${{github.event.head_commit.message}}\""
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         embed-description: |
-          Job was ${{ job.status == 'failed' && 'not' || '' }} completed successfully. ${{job.status}}
+          Job was ${{ needs.e2e-test.result == 'failed' && 'not' || '' }} completed successfully. ${{needs.e2e-test.result}}
           [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
@@ -319,7 +319,7 @@ jobs:
         embed-title: "Build complete for \"${{github.event.head_commit.message}}\"... Cleaning up"
         embed-url: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         embed-description: |
-          Job was ${{ job.status == 'failed' && 'not' || '' }} completed successfully. ${{job.status}}
+          Job was ${{ job.status == 'failed' && 'not' || '' }} completed successfully.
           [Action details ${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
         embed-author-name: "${{ github.triggering_actor }}"
         thread-id: "1226941088137478236"
